Coalitions can now have individual member corps
